--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Seu Nome",
   "license": "MIT",
   "dependencies": {
+    "@vercel/edge-config": "^1.3.0",
     "express": "^4.21.1",
     "socket.io": "^4.8.1",
     "sqlite3": "^5.1.7"
