--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "curso-lucrativo",
+  "name": "meu-servidor",
   "version": "1.0.0",
-  "description": "Curso gratuito de vídeos lucrativos",
-  "main": "server.js",
   "scripts": {
+    "dev": "node server.js",
+    "build": "next build",
     "start": "node server.js"
   },
-  "author": "Seu Nome",
-  "license": "MIT",
   "dependencies": {
-    "@vercel/edge-config": "^1.3.0",
-    "express": "^4.21.1",
-    "socket.io": "^4.8.1",
-    "sqlite3": "^5.1.7"
+    "@vercel/edge-config": "^1.0.0",
+    "express": "^4.17.1",
+    "socket.io": "^4.0.0",
+    "sqlite3": "^5.0.0"
   }
 }
