--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "meu-servidor",
   "version": "1.0.0",
+  "main": "server.js",
   "scripts": {
-    "dev": "node server.js",
+    "dev": "next dev",
     "build": "next build",
-    "start": "node server.js"
+    "start": "next start"
   },
   "dependencies": {
-    "@vercel/edge-config": "^1.0.0",
-    "express": "^4.17.1",
-    "socket.io": "^4.0.0",
-    "sqlite3": "^5.0.0"
+    "next": "^13.1.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "dotenv": "^16.0.0"
   }
 }
+
